@@ -1,6 +1,8 @@
 ver 0.19.1 (not yet released)
 * input
   - mms: fix deadlock bug
+* playlist
+  - extm3u: fix Extended M3U detection
 * fix build failure on Mac OS X
 * add missing file systemd/mpd.socket to tarball
 
